# uatcn

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  exp.sh
include/: anxious.hpp  astar.hpp  hexgrid.hpp  naive.hpp
scripts/: summary_agents.r
src/: anxious.cpp  astar.cpp  hexgrid.cpp  main.cpp  naive.cpp
